// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`portals_p2.sql > line 7 1`] = `
[
  "DECLARE foo13 CURSOR FOR
   SELECT * FROM onek WHERE unique1 = 50",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 256,
            "portalname": "foo13",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 42,
                      "relname": "onek",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 35,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 35,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "unique1",
                            },
                          },
                        ],
                        "location": 53,
                      },
                    },
                    "location": 61,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 50,
                        },
                        "location": 63,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals_p2.sql > line 40 1`] = `
[
  "DECLARE foo24 CURSOR FOR
   SELECT * FROM onek2 WHERE unique1 = 50",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 256,
            "portalname": "foo24",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 42,
                      "relname": "onek2",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 35,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 35,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "unique1",
                            },
                          },
                        ],
                        "location": 54,
                      },
                    },
                    "location": 62,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 50,
                        },
                        "location": 64,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals_p2.sql > line 46 1`] = `
[
  "FETCH all in foo13",
  {
    "stmts": [
      {
        "stmt": {
          "FetchStmt": {
            "direction": "FETCH_FORWARD",
            "howMany": 9223372036854776000,
            "portalname": "foo13",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals_p2.sql > line 72 1`] = `
[
  "CLOSE foo13",
  {
    "stmts": [
      {
        "stmt": {
          "ClosePortalStmt": {
            "portalname": "foo13",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`portals_p2.sql > line 98 1`] = `
[
  "END",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_COMMIT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
